# tic-tac-toe

./: .gitignore  CMakeLists.txt  GameModel.cpp  GameModel.h  LICENSE  README.md
TicTacToeLib/: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  TicTacToeTests.cpp
src/App/: CMakeLists.txt  GameModel.cpp  GameModel.h  main.cpp  main.qml
src/App/TicTacToeUi/: Board.qml  GameControls.qml  LevelComboBox.qml
src/TicTacToeLib/: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  TicTacToeTests.cpp
